force-app/main/default/objects/ERP_InboundPart__c/ERP_InboundPart__c.object-meta.xml
<CustomObject>
    <label>ERP InboundPart</label>
    <nameField>
        <label>ERP InboundPart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP InboundParts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>