force-app/main/default/objects/ERP_InboundPart__c/fields/ArrivedAt__c.field-meta.xml
<CustomField>
    <fullName>ArrivedAt__c</fullName>
    <label>ArrivedAt</label>
    <type>DateTime</type>
</CustomField>