force-app/main/default/objects/ERP_InboundPart__c/fields/BatchKey__c.field-meta.xml
<CustomField>
    <fullName>BatchKey__c</fullName>
    <label>Batch Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>