force-app/main/default/objects/ERP_InboundPart__c/fields/BatchPartKey__c.field-meta.xml
<CustomField>
    <fullName>BatchPartKey__c</fullName>
    <label>Batch Part Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>