force-app/main/default/objects/ERP_InboundPart__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>Part Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>