force-app/main/default/objects/ERP_InboundPart__c/fields/ProcessedAt__c.field-meta.xml
<CustomField>
    <fullName>ProcessedAt__c</fullName>
    <label>ProcessedAt</label>
    <type>DateTime</type>
</CustomField>