force-app/main/default/objects/ERP_InboundPart__c/fields/Total_Parts__c.field-meta.xml
<CustomField>
    <fullName>Total_Parts__c</fullName>
    <label>Total Parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>